--- a/src/SConscript
+++ b/src/SConscript
@@ -31,7 +31,7 @@ env.standalone = env.Object( "main.cpp" )
 
 # gather unit tests
 l_tests = [ 'tests.cpp',
-            'solver/fwave.test.cpp'
+            'solvers/fwave.test.cpp',
             'solvers/Roe.test.cpp',
             'patches/WavePropagation1d.test.cpp',
             'io/Csv.test.cpp',
