--- a/src/SConscript
+++ b/src/SConscript
@@ -23,6 +23,7 @@ l_sources = [ 'solvers/Roe.cpp',
               'patches/WavePropagation1d.cpp',
               'setups/DamBreak1d.cpp',
               'setups/RareRare1d.cpp',
+              'setups/ShockShock1d.cpp',
               'io/Csv.cpp' ]
 
 for l_so in l_sources:
@@ -36,7 +37,9 @@ l_tests = [ 'tests.cpp',
             'solvers/Roe.test.cpp',
             'patches/WavePropagation1d.test.cpp',
             'io/Csv.test.cpp',
-            'setups/DamBreak1d.test.cpp' ]
+            'setups/DamBreak1d.test.cpp',
+            'setups/RareRare1d.test.cpp',
+            'setups/ShockShock1d.test.cpp']
 
 for l_te in l_tests:
   env.tests.append( env.Object( l_te ) )
