--- a/src/SConscript
+++ b/src/SConscript
@@ -24,6 +24,7 @@ l_sources = [ 'solvers/Roe.cpp',
               'setups/DamBreak1d.cpp',
               'setups/RareRare1d.cpp',
               'setups/ShockShock1d.cpp',
+              'setups/DamBreakNew.cpp',
               'io/Csv.cpp' ]
 
 for l_so in l_sources:
