--- a/src/SConscript
+++ b/src/SConscript
@@ -21,6 +21,7 @@ Import('env')
 l_sources = [ 'solvers/Roe.cpp',
               'solvers/fwave.cpp',
               'patches/WavePropagation1d.cpp',
+              'patches/WavePropagation2d.cpp',
               'setups/DamBreak1d.cpp',
               'setups/RareRare1d.cpp',
               'setups/ShockShock1d.cpp',
