--- a/src/SConscript
+++ b/src/SConscript
@@ -40,6 +40,7 @@ l_tests = [ 'tests.cpp',
             'solvers/fwave.test.cpp',
             'solvers/Roe.test.cpp',
             'patches/WavePropagation1d.test.cpp',
+            'patches/WavePropagation2d.test.cpp',
             'io/Csv.test.cpp',
             'setups/DamBreak1d.test.cpp',
             'setups/RareRare1d.test.cpp',
