--- a/src/SConscript
+++ b/src/SConscript
@@ -23,6 +23,7 @@ l_sources = [ 'solvers/Roe.cpp',
               'patches/WavePropagation1d.cpp',
               'patches/WavePropagation2d.cpp',
               'setups/DamBreak1d.cpp',
+              'setups/ArtificialTsunami.cpp',
               'setups/RareRare1d.cpp',
               'setups/ShockShock1d.cpp',
               'setups/DamBreakNew.cpp',
