add sudo apt-get update in pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
 
       - name: Dependencies
         run: |
+          sudo apt-get update
           sudo apt-get install scons
           sudo apt-get install valgrind
           sudo apt-get install cppcheck
