--- a/src/SConscript
+++ b/src/SConscript
@@ -18,20 +18,10 @@
 Import('env')
 
 # gather sources
-l_sources = [ 'solvers/Roe.cpp',
-              'solvers/fwave.cpp',
-              'patches/WavePropagation1d.cpp',
+l_sources = [ 'solvers/fwave.cpp',
               'patches/WavePropagation2d.cpp',
-              'setups/DamBreak1d.cpp',
               'setups/ArtificialTsunami.cpp',
-              'setups/RareRare1d.cpp',
-              'setups/ShockShock1d.cpp',
-              'setups/DamBreakNew.cpp',
-              'setups/CircularDamBreak2d.cpp',
-              'setups/SupercriticalFlow.cpp',
-              'setups/SubcriticalFlow.cpp',
               'setups/TsunamiEvent.cpp',
-              'io/Csv.cpp',
               'io/NetCdf.cpp']
 
 for l_so in l_sources:
@@ -42,13 +32,7 @@ env.standalone = env.Object( "main.cpp" )
 # gather unit tests
 l_tests = [ 'tests.cpp',
             'solvers/fwave.test.cpp',
-            'solvers/Roe.test.cpp',
-            'patches/WavePropagation1d.test.cpp',
-            'patches/WavePropagation2d.test.cpp',
-            'io/Csv.test.cpp',
-            'setups/DamBreak1d.test.cpp',
-            'setups/RareRare1d.test.cpp',
-            'setups/ShockShock1d.test.cpp']
+            'patches/WavePropagation2d.test.cpp']
 
 for l_te in l_tests:
   env.tests.append( env.Object( l_te ) )
