--- a/src/SConscript
+++ b/src/SConscript
@@ -22,7 +22,8 @@ l_sources = [ 'solvers/fwave.cpp',
               'patches/WavePropagation2d.cpp',
               'setups/ArtificialTsunami.cpp',
               'setups/TsunamiEvent.cpp',
-              'io/NetCdf.cpp']
+              'io/NetCdf.cpp',
+              'cuda/cuda_solver.cu']
 
 for l_so in l_sources:
   env.sources.append( env.Object( l_so ) )
