--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,24 +52,24 @@ jobs:
         run: |
           scons mode=debug+san
           ./build/tests
-          ./build/tsunami_lab 25 1
-          ./build/tsunami_lab 25 0
+          ./build/tsunami_lab 1 10 30 50
+          ./build/tsunami_lab 1 1 30 50
           scons mode=release+san
           ./build/tests
-          ./build/tsunami_lab 100 1
-          ./build/tsunami_lab 100 0
+          ./build/tsunami_lab 100 1 10 30 50
+          ./build/tsunami_lab 100 1 10 30 50
 
       - name: Valgrind
         run: |
           scons mode=debug
           valgrind ./build/tests
-          valgrind ./build/tsunami_lab 25  1
-          valgrind ./build/tsunami_lab 25 0
+          valgrind ./build/tsunami_lab 1 10 30 50
+          valgrind ./build/tsunami_lab 1 1 30 50
 
 
       - name: Release
         run: |
           scons
           ./build/tests
-          ./build/tsunami_lab 100 1
-          ./build/tsunami_lab 100 0
+          ./build/tsunami_lab 1 10 100 100
+          ./build/tsunami_lab 1 1 100 100
