--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,9 @@ jobs:
           sudo apt-get install valgrind
           sudo apt-get install cppcheck
           sudo apt-get install libnetcdf-dev
+          sudo apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/cuda/repos/Ubuntu20.04.2.LTS/x86_64/7fa2af80.pub
+          sudo apt-get update
+          sudo apt-get install cuda
           git submodule init
           git submodule update
 
